Adicionado endpoint para excluir usuário, implementado excluir usuário na UI

--- a/frontend/jquery/css/layoutShared.css
+++ b/frontend/jquery/css/layoutShared.css
@@ -13,6 +13,18 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     font-weight: bold;
+    text-decoration: none;
+    border-radius: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid transparent;
+}
+
+.btn.btn-dark {
+    color: #fff;
+    background-color: #212529;
+    border-color: #212529;
 }
 
 .margin-left-10 {
