Adicionado endpoint para cadastrar estudante, implementado recurso na UI para cadastrar estudante

--- a/frontend/jquery/css/layoutShared.css
+++ b/frontend/jquery/css/layoutShared.css
@@ -12,7 +12,6 @@ body {
     height: 40px;
     padding-left: 20px;
     padding-right: 20px;
-    font-weight: bold;
     text-decoration: none;
     border-radius: 0.25rem;
     display: flex;
@@ -25,6 +24,12 @@ body {
     color: #fff;
     background-color: #212529;
     border-color: #212529;
+}
+
+.btn.btn-warning {
+    color: #000;
+    background-color: #ffc107;
+    border-color: #ffc107;
 }
 
 .margin-left-10 {
