--- a/frontend/react-app/src/App.css
+++ b/frontend/react-app/src/App.css
@@ -22,7 +22,7 @@
 
 .btn.btn-dark {
   color: #fff;
-  background-color: #212529;
+  background-image: linear-gradient(to right, #141e30, #243b55);
   border-color: #212529;
 }
 
@@ -45,14 +45,14 @@
 }
 
 .container .main-header {
-  background-color: #21252980;
   width: 100%;
-  height: 40px;
+  height: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-  font-weight: 600;
-  font-size: 16px;
+  font-weight: 400;
+  font-size: 22px;
+  padding-left: 20px;
 }
 
 .display-none {
