--- a/frontend/react-app/src/components/shared/Navbar/style.css
+++ b/frontend/react-app/src/components/shared/Navbar/style.css
@@ -1,5 +1,5 @@
 .main-nav {
-    background-color: #212529;
+    background-image: linear-gradient(to right, #141e30, #243b55);
     width: 250px;
     height: 100vh;
 }
@@ -8,10 +8,11 @@
     font-size: 20px;
     font-weight: 600;
     color: white;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
     border-bottom: 1px solid gray;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main-nav .nav-links {
